Fix icon indicator being stretched

--- a/extension/stylesheet.css
+++ b/extension/stylesheet.css
@@ -19,6 +19,7 @@
 }
 
 .extension-pomodoro-indicator .system-status-icon {
+    padding: 0;
 }
 
 .extension-pomodoro-indicator-menu {
